terms page added

--- a/terms.html
+++ b/terms.html
@@ -17,8 +17,32 @@
     </header>
     <main class="container mx-auto">
         <section class="bg-white ">
-            <div >
-                <h1>Terms & Conditions</h1>
+            <div class="p-4">
+                <h1 class="pt-3 text-center font-bold text-lg">Terms & Conditions</h1>
+                <p class="border-b-2 border-b-gray-300 pb-8">Swap is a service provided by Salt side Technologies AB (subject to your compliance with the Terms and Conditions set forth below). Please read these Terms and Conditions before using this platform.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">General</h1>
+                <p class="pb-8">Swap is a service provided by Salt side Technologies AB (subject to your compliance with the Terms and Conditions set forth below). Please read these Terms and Conditions before using this platform.</p>
+                <p class="pb-8">Swap is a service provided by Salt side Technologies AB (subject to your compliance with the Terms and Conditions set forth below). Please read these Terms and Conditions before using this platform.</p>
+                <p class="pb-8">Swap is a service provided by Salt side Technologies AB (subject to your compliance with the Terms and Conditions set forth below). Please read these Terms and Conditions before using this platform.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Copyright</h1>
+                <p class="pb-8">Advertisers grant SWAP and Salt side Technologies AB a perpetual, royalty-free, irrevocable, non-exclusive right and license to use, reproduce, modify, adapt, publish, translate, create derivative works from and distribute such Content or incorporate such Content into any form, medium, or technology now known or later developed.</p>
+                <p class="pb-8">The material (including the Content, and any other content, software or services) contained on SWAP are the property of Salt side Technologies AB, its subsidiaries, affiliates and/or third party licensors. Any intellectual property rights, such as copyright, trademarks, service marks, trade names and other distinguishing brands on the Web Site are the property of Salt side Technologies AB. To be clear: No material on this site may be copied, reproduced, republished, installed, posted, transmitted, stored or distributed without written permission from Salt side Technologies AB.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Watermarks</h1>
+                <p class="pb-8">All images on SWAP are watermarked, which prevents the images to be used for other purposes, without the consent of the advertiser.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Safety and images</h1>
+                <p class="pb-8">SWAP and Salt side Technologies AB reserves the right to change the title of the Content, for editorial purposes. SWAP and Salt side Technologies AB reserves the right not to publish images that are irrelevant or images that violate SWAP's rules.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Personal</h1>
+                <p class="pb-8">SWAP and Salt side Technologies AB has the right to cooperate with authorities in the case any Content violates the law. The identity of advertisers, users or buyers may be determined, for example by an ISP. IP addresses may also be registered in order to ensure compliance with the terms and conditions.</p>
             </div>
         </section>
     </main>
