terms page added

--- a/terms.html
+++ b/terms.html
@@ -44,6 +44,33 @@
                 <h1 class="pt-3 font-bold text-lg">Personal</h1>
                 <p class="pb-8">SWAP and Salt side Technologies AB has the right to cooperate with authorities in the case any Content violates the law. The identity of advertisers, users or buyers may be determined, for example by an ISP. IP addresses may also be registered in order to ensure compliance with the terms and conditions.</p>
             </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Privacy</h1>
+                <p class="pb-8">SWAP and Salt side Technologies AB will collect information from Users and Advertisers. It is a condition of use of the SWAP that each User and advertiser consents and authorizes SWAP and Salt side Technologies AB to collect and use this information. SWAP and Salt side Technologies AB also reserves the right to disclose it to Company Affiliates and any other person for the purposes of administering, supporting and maintaining SWAP, as well as for improving SWAP, for example by using the information for research, marketing, product development and planning.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Cookies</h1>
+                <p class="pb-8">This site uses cookies, which means that you must have cookies enabled on your computer in order for all functionality on this site to work properly. A cookie is a small data file that is written to your hard drive when you visit certain Web sites. Cookie files contain certain information, such as a random number user ID that the site assigns to a visitor to track the pages visited. A cookie cannot read data off your hard disk or read cookie files created by other sites. Cookies, by themselves, cannot be used to find out the identity of any user.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Email address of users</h1>
+                <p class="pb-8">Users are required to submit a valid email address, before they are allowed to post advertisements. The email address of the User shall not be publicly displayed and other users are permitted to send email to the User through SWAP.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Site availability</h1>
+                <p class="pb-8">SWAP and Salt side Technologies AB does not guarantee continuous or secure access to the Web Site. The Web Site is provided "as is" and as and when available.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Links to third party websites</h1>
+                <p class="pb-8">SWAP may contain links or references to other websites ('Third Party Websites'). SWAP or Salt side Technologies AB shall not be responsible for the contents in Third Party Websites. Third Party Websites are not investigated or monitored. In the event the user decides to leave SWAP and access Third Party Sites, the user does so at his/her own risk.</p>
+            </div>
+            <div class="p-4">
+                <h1 class="pt-3 font-bold text-lg">Paid content and services</h1>
+                <p class="pb-8">Some content and services of SWAP require payment, including but not limited to, membership packages, posting of ads in select categories, and sale of items through Doorstep Delivery.</p>
+            </div>
+            <div class="p-4">
+                <p>Back to <a href="/index.html" class="text-blue-400">Home</a> page</p>
+            </div>
         </section>
     </main>
     <footer>
