--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 class="w-full bg-[#149777] rounded-[4px] text-white mt-5 flex justify-center items-center font-bold p-2"><i
                                     class="fa-regular fa-envelope mr-3"></i> Continue with Email</a>
                             <p class="text-xs text-center mb-6 pb-4">By signing up for an account you agree to our<br><a
-                                    href="/terms.html" class="text-blue-500">Terms and Conditions</a></p>
+                                    href="terms.html" class="text-blue-500">Terms and Conditions</a></p>
                         </div>
                     </div>
                     <div class="container w-11/12 mx-auto lg:-mt-[350px]">
