product page added

--- a/terms.html
+++ b/terms.html
@@ -69,7 +69,7 @@
                 <p class="pb-8">Some content and services of SWAP require payment, including but not limited to, membership packages, posting of ads in select categories, and sale of items through Doorstep Delivery.</p>
             </div>
             <div class="p-4">
-                <p>Back to <a href="/index.html" class="text-blue-400">Home</a> page</p>
+                <p>Back to <a href="index.html" class="text-blue-400">Home</a> page</p>
             </div>
         </section>
     </main>
