--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                     <button class="text-red-400">See All</button>
                 </div>
                 <div class="grid grid-cols-4 justify-items-center pt-10 w-11/12 mx-auto mb-4">
-                    <div class="flex flex-col items-center">
+                    <a class="flex flex-col items-center" href="product-detail.html">
                         <i class="fa-solid fa-car font-medium text-5xl text-[#149777]"></i>
                         <h2 class="text-center font-bold">Vehicle</h2>
                         <p>253,010 ads</p>
-                    </div>
+                    </a>
                     <div class="flex flex-col items-center">
                         <i class="fa-solid fa-house-chimney font-medium text-5xl text-[#149777]"></i>
                         <h2 class="text-center font-bold">Property</h2>
