product page added

--- a/product-detail.html
+++ b/product-detail.html
@@ -65,16 +65,119 @@
                     <div class="swiper-slide">
                         <img class="from-slate-200" src="img/Xiaomi-Redmi-A1-Plus.jpg" alt="404 Not Found">
                         <div class="p-5 relative left-10 -top-28 font-bold">
-                            <p class="font-normal text-white">Apple Gallery</p>
+                            <p class="font-normal text-white bg-">Apple Gallery</p>
                             <h2 class="text-white">Iphone 20 Pro Max</h2>
                             <p class="text-[#149777]">TK <span>200,000</span></p>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
-
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="w-10/12 mx-auto">
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img class="w-28 h-40" src="img/Xiaomi-Redmi-Note-12.jpg" alt=""/></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Tecno spark go (Used)</h2>
+                      <p>Dhaka</p>
+                      <p>Tk <span>1000</span></p>
+                      <div class="card-actions justify-end">
+                        <p class="text-end">5 min ago</p>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </main>
