--- a/product-detail.html
+++ b/product-detail.html
@@ -13,6 +13,8 @@
     <title>Product</title>
     <style>
         .swiper .swiper-wrapper .swiper-slide img {
+            width: 350px;
+            height: 500px;
             display: block;
             margin: 0 auto;
         }
