--- a/index.html
+++ b/index.html
@@ -92,8 +92,43 @@
                         <p>253,010 ads</p>
                     </div>
                     <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-house-chimney font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Property</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-house-chimney font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Property</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
                         <i class="fa-solid fa-mobile-screen-button font-medium text-5xl text-[#149777]"></i>
                         <h2 class="text-center font-bold">Mobile</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-mobile-screen-button font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Mobile</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-mobile-screen-button font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Mobile</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-paw font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Pets & animal</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-paw font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Pets & animal</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-paw font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Pets & animal</h2>
                         <p>253,010 ads</p>
                     </div>
                     <div class="flex flex-col items-center">
@@ -107,6 +142,16 @@
                         <p>253,010 ads</p>
                     </div>
                     <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-shirt font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">T-Shirt</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
+                        <i class="fa-solid fa-person-dress font-medium text-5xl text-[#149777]"></i>
+                        <h2 class="text-center font-bold">Women's Fashion</h2>
+                        <p>253,010 ads</p>
+                    </div>
+                    <div class="flex flex-col items-center">
                         <i class="fa-solid fa-person-dress font-medium text-5xl text-[#149777]"></i>
                         <h2 class="text-center font-bold">Women's Fashion</h2>
                         <p>253,010 ads</p>
@@ -116,15 +161,7 @@
                         <h2 class="text-center font-bold">Service</h2>
                         <p>253,010 ads</p>
                     </div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
-                    <div>7</div>
-                    <div>8</div>
-                    <div>9</div>
-                    <div>10</div>
-                    <div>11</div>
-                    <div>12</div>
+                    
                 </div>
                 <div class="flex flex-col gap-4 mx-auto lg:flex-row">
                     <div class="card w-11/12 mx-auto bg-base-100 shadow-xl lg:w-2/5">
